# relic

./: .gitignore  CMakeLists.txt  fetch_legendary.py
KirigamiSupport/: CMakeLists.txt
KirigamiSupport/include/: KirigamiSupport.h  module.modulemap
Resources/: AboutPage.qml  LibraryPage.qml  MainWindow.qml  ProfilePage.qml  StorePage.qml  main.qml
Sources/: App.swift
Sources/App/: App.swift  AppViewModel.swift  CMakeLists.txt  Info.plist.in  LibraryViewModel.swift  UserViewModel.swift
Sources/EpicKit/: CMakeLists.txt  EPCAPI.swift  EpicClient.swift
Sources/KirigamiSupport/: CMakeLists.txt  KirigamiSupport.cpp
Sources/LegendaryKit/: CMakeLists.txt  LaunchParameters.swift  LegendaryFS.swift  Library.swift  Models.swift  Paths.swift  User.swift  WineDetector.swift
Sources/LegendaryKit/SubProcess/Commands/: AuthCommand.swift  BaseTypes.swift  ImportCommand.swift  InfoCommand.swift  InstallCommand.swift  LegendaryCommand.swift  ListCommand.swift
Sources/LegendaryKit/SubProcess/Runner/: LegendaryRunner.swift
